--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -1,24 +1,45 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-}
+  margin: 0;
+  padding: 0; }
 
-/* Set padding to keep content from hitting the edges */
+header {
+  display: block;
+  background: #444;
+  color: white;
+  padding: 1em 2em; }
+  header ul.nav {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif; }
+    header ul.nav li {
+      display: inline-block;
+      margin-right: 1em; }
+      header ul.nav li a {
+        text-decoration: none;
+        color: white; }
+
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
+  padding: 0 2em; }
+  .body-content .center {
+    width: 300px;
+    height: 200px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -100px 0 0 -150px;
+    text-align: center; }
+    .body-content .center h1 {
+      font-size: 4em;
+      font-family: 'Roboto Light', 'Segoe UI Light', 'Verdana', sans-serif;
+      margin-bottom: 0; }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
-}
+footer {
+  color: white;
+  background: #444;
+  width: 100%;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  font-family: sans-serif;
+  padding: .2em 2em; }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
