--- a/UI-MVC/Views/Home/Index.cshtml
+++ b/UI-MVC/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="center">
-    <h1>BeatBuddy</h1>
+    <img src="~/Content/img/logo_small.png"/>
     <p>Will settle here soon!</p>
     <p>- Team D</p>
 </div>
