Added few changes domain model

--- a/UI-MVC/Views/Organisations/Index.cshtml
+++ b/UI-MVC/Views/Organisations/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BB.BL.Domain.Organisations.Organisation>
+﻿@model IEnumerable<BB.UI.Web.MVC.Models.OrganisationViewModel>
 
 @{
     ViewBag.Title = "Index";
@@ -19,9 +19,11 @@
             @Html.DisplayNameFor(model => model.BannerUrl)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.ImageUrl)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.ColorScheme)
         </th>
-        
         <th></th>
     </tr>
 
@@ -34,13 +36,15 @@
             @Html.DisplayFor(modelItem => item.BannerUrl)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.ImageUrl)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.ColorScheme)
         </td>
-        
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
         </td>
     </tr>
 }
