Banner Image and Avatar image

--- a/UI-MVC/Views/Organisations/Create.cshtml
+++ b/UI-MVC/Views/Organisations/Create.cshtml
@@ -8,7 +8,7 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create","Organisations", null, FormMethod.Post, new {enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -27,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.BannerUrl, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BannerUrl, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="file" id="bannerImage" name="bannerImage" />
                 @Html.ValidationMessageFor(model => model.BannerUrl, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -35,7 +35,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ImageUrl, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ImageUrl, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="file" id="avatarImage" name="avatarImage" />
                 @Html.ValidationMessageFor(model => model.ImageUrl, "", new { @class = "text-danger" })
             </div>
         </div>
