--- a/UI-MVC/Views/Home/Index.cshtml
+++ b/UI-MVC/Views/Home/Index.cshtml
@@ -2,8 +2,11 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="center">
-    <img src="~/Content/img/logo_small.png"/>
-    <p>Will settle here soon!</p>
-    <p>- Team D</p>
+<div class="title">
+    <h1>What</h1>
+    is BeatBuddy?
 </div>
+
+<p>Beatbuddy is a collaborative music platform, that will allow you to create playlists with your friends family and more!</p>
+
+<a href="#" class="btn">I am a button!</a>
