--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -1,11 +1,15 @@
 ﻿body {
-  margin: 0;
-  padding: 0;
+  margin: auto;
+  max-width: 1500px;
+  padding: 0; }
+
+* {
   font-family: 'Roboto', sans-serif; }
 
 header {
   display: block;
-  padding: 1em 5em; }
+  padding: 1em 5em;
+  margin-bottom: 1em; }
   @media screen and (max-width: 600px) {
     header {
       padding: 1em 1em;
@@ -39,33 +43,65 @@ header {
           width: 100%;
           margin-left: 0; } }
       header ul.nav li a {
+        transition: border .2s;
+        -webkit-transition: border .2s;
+        border-bottom: 2px solid white;
+        padding-bottom: .2em;
         text-decoration: none;
         text-transform: lowercase;
         color: black; }
+        header ul.nav li a:hover {
+          border-bottom: 2px solid black; }
 
 .body-content {
-  padding: 0 5em; }
+  padding: 0 5em;
+  max-width: 1500px;
+  margin: auto; }
   @media screen and (max-width: 600px) {
     .body-content {
       padding: 0 1em; } }
-  .body-content .center {
-    width: 682px;
-    height: 200px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin: -100px 0 0 -341px;
-    text-align: center; }
-    .body-content .center h1 {
-      font-size: 4em;
-      font-family: 'Roboto Light', 'Segoe UI Light', 'Verdana', sans-serif;
+  .body-content .title {
+    font-weight: 300;
+    font-size: 1.4em; }
+    .body-content .title h1 {
+      display: inline-block;
+      font-family: Roboto;
+      font-weight: 700;
+      text-transform: uppercase;
+      font-size: 1em;
+      margin-top: 0;
       margin-bottom: 0; }
+      .body-content .title h1:after {
+        content: ' |';
+        font-weight: 200; }
+  .body-content .form-group {
+    max-width: 500px; }
+    .body-content .form-group input {
+      padding: .5em;
+      margin-bottom: .7em; }
+    .body-content .form-group label {
+      padding-top: .25em; }
+  .body-content .round {
+    border-radius: 50%; }
+
+.btn {
+  display: inline-block;
+  padding: .4em 1em .5em 1em;
+  color: white;
+  background: black;
+  text-decoration: none;
+  text-transform: lowercase;
+  border: 2px solid black;
+  border-radius: 4px; }
+  .btn:hover {
+    background: #222; }
 
 footer {
-  width: 100%;
   display: block;
   position: absolute;
   bottom: 0;
+  width: 100%;
+  max-width: 1500px;
   font-family: sans-serif;
   padding: 0.2em 5em;
   text-align: center; }
