--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -13,6 +13,13 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.material-icons{
+    position: relative;
+    top: .25em;
+    line-height: .3em;
+    margin-left: -.1em;
+}
+
 header {
     display: block;
     padding: 1em $sidemargin;
