--- a/UI-MVC/Views/Home/Index.cshtml
+++ b/UI-MVC/Views/Home/Index.cshtml
@@ -9,4 +9,7 @@
 
 <p>Beatbuddy is a collaborative music platform, that will allow you to create playlists with your friends family and more!</p>
 
-<a href="#" class="btn">I am a button!</a>
+<a href="#" class="btn">
+    <i class="material-icons">check</i>
+    I am a button!
+</a>
