--- a/UI-MVC/Views/Account/Register.cshtml
+++ b/UI-MVC/Views/Account/Register.cshtml
@@ -5,7 +5,7 @@
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype= "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
@@ -50,7 +50,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.ImageUrl, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.ImageUrl, new { @class = "form-control" })
+            <input type="file" id="profileImage" name="profileImage"/>
         </div>
     </div>
     <div class="form-group">
