--- a/UI-MVC/Views/Organisations/Create.cshtml
+++ b/UI-MVC/Views/Organisations/Create.cshtml
@@ -5,8 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
-
+<div class="title">
+    <h1>Create</h1>
+    a new organisation
+</div>
 
 @using (Html.BeginForm("Create","Organisations", null, FormMethod.Post, new {enctype = "multipart/form-data" }))
 {
