--- a/UI-MVC/Views/Organisations/Index.cshtml
+++ b/UI-MVC/Views/Organisations/Index.cshtml
@@ -1,15 +1,34 @@
-﻿@model IEnumerable<BB.UI.Web.MVC.Models.OrganisationViewModel>
+﻿@using BB.UI.Web.MVC.Models
+@model IEnumerable<BB.UI.Web.MVC.Models.OrganisationViewModel>
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js" type="text/javascript"></script>
+<script src="~/Scripts/jquery.modal.js" type="text/javascript"></script>
+<link href="~/Content/jquery.modal.css" rel="stylesheet" type="text/css" />
+<script>
+    $('#create_btn').click(function() {
+        $('#create_modal').modal();
+    })
+</script>
+<div class="title">
+    <h1>My Organisations</h1>|
+    @if (!@Model.Any())
+    {
+        <text> No Organisations </text>
+    }
+</div>
 
-<h2>Index</h2>
+<div id="create_modal" class="modal">
+    <div class="content">
+        @Html.Partial("Create", new OrganisationViewModel())
+    </div>
+</div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<button id="create_btn" data-toggle="modal" data-target="#create_modal" class="btn">Create new organisation</button>
+
 <table class="table">
     <tr>
         <th>
@@ -27,26 +46,27 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BannerUrl)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ImageUrl)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ColorScheme)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
-
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BannerUrl)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ImageUrl)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ColorScheme)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new {/* id=item.PrimaryKey */}) |
+                @Html.ActionLink("Details", "Details", new {/* id=item.PrimaryKey */}) |
+                @Html.ActionLink("Delete", "Delete", new {/* id=item.PrimaryKey */})
+            </td>
+        </tr>
+    }
 </table>
+
