--- a/UI-MVC/Content/bootstrap-grid.css
+++ b/UI-MVC/Content/bootstrap-grid.css
@@ -672,8 +672,10 @@
 
 .center-block {
   display: block;
+  max-width: 400px;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  text-align: center; }
 
 .pull-right {
   float: right !important; }
