--- a/UI-MVC/Views/Account/Login.cshtml
+++ b/UI-MVC/Views/Account/Login.cshtml
@@ -4,38 +4,35 @@
     ViewBag.Title = "Log in";
 }
 
-<div class="title extramargin">
+<div class="title">
     <h1>Log in</h1> sign in to your account
 </div>
 
-<div>
-    @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+<div class="center-block">
+    @using (Html.BeginForm("Login", "Account", new {ReturnUrl = ViewBag.ReturnUrl}, FormMethod.Post, new {enctype="multipart/form-data", role = "form"}))
     {
         @Html.AntiForgeryToken()
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, "", new {@class = "text-danger"})
 
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email)
-            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-        </div>
-
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password)
-            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-        </div>
-
-        <div class="col-md-offset-2 col-md-10">
-            <div class="checkbox">
-                @Html.CheckBoxFor(m => m.RememberMe)
-                @Html.LabelFor(m => m.RememberMe)
+        
+            <div class="center-block">
+                @Html.TextBoxFor(m => m.Email, new { @class = "custom-input", placeholder = Html.DisplayNameFor(m => m.Email) })
+                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
             </div>
-        </div>
+            <div class="center-block">
+                @Html.PasswordFor(m => m.Password, new { @class = "custom-input", placeholder = Html.DisplayNameFor(m => m.Password) })
+                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+            </div>
 
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Log in" class="btn btn-default" /> or @Html.ActionLink("Register as a new user", "Register")
-        </div>
+            <div class="center-block">
+                <input type="submit" value="Login" style="width: 75%" class="btn btn-default"/>
+            </div>
+            <p></p>
+            <div class="center-block">
+                @Html.ActionLink("Register", "Register", "", new {@class = "btn btn-default", style="width: 90%; margin-top: 1em"})
+            </div>
+
+       
         @* Enable this once you have account confirmation enabled for password reset functionality
             <p>
                 @Html.ActionLink("Forgot your password?", "ForgotPassword")
