--- a/UI-MVC/Views/Shared/_LoginPartial.cshtml
+++ b/UI-MVC/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,6 @@
-﻿@using Microsoft.AspNet.Identity
+﻿@using BB.UI.Web.MVC.Models
+@using Microsoft.AspNet.Identity
+<link rel="stylesheet" type="text/css" href="~/Content/modal.css">
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -16,7 +18,18 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new {id = "registerLink"})</li>
+        <li><a href="#loginModal">Login</a></li>
     </ul>
+    <div id="loginModal" class="modal" >
+        <div class="modal-content">
+            <a href="#" title="Close" class="close">X</a>
+            <div class="modal-body">
+                <div class="center-block">
+                    @Html.Partial("../Account/Login", new LoginViewModel())
+                </div>
+            </div>
+        </div>
+    </div>
+
 }
