--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -121,6 +121,7 @@ header {
 
         label {
             padding-top: .25em;
+            padding-bottom: .10em;
         }
 
         input {
@@ -145,12 +146,18 @@ header {
     }
 }
 
+.centerimage{
+    text-align: center;
+}
+.verticalLine {
+    border-left: thick solid #ff0000;
+}
 .custom-input{
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border-radius: 3px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    border-radius: 2px;
     -webkit-box-shadow: 0 1px 0 #F1F1F1, 0 -2px 5px rgba(0, 0, 0, 0.08) inset;
     -moz-box-shadow: 0 1px 0 #F1F1F1, 0 -2px 5px rgba(0, 0, 0, 0.08) inset;
     -ms-box-shadow: 0 1px 0 #F1F1F1, 0 -2px 5px rgba(0, 0, 0, 0.08) inset;
@@ -183,7 +190,17 @@ header {
 .round {
     border-radius: 50%;
 }
-
+.roundcolored {
+    border-radius: 50%;
+    border-color:black;
+    border: 1.5px solid;
+}
+.roundcolored:hover{
+    border-color: #0000FF;
+}
+.text-danger{
+    color:red;
+}
 #results {
     padding: 0;
 
