--- a/UI-MVC/Views/Shared/_Layout.cshtml
+++ b/UI-MVC/Views/Shared/_Layout.cshtml
@@ -7,15 +7,17 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,500,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     @Styles.Render("~/Content/css")
-    
+
 </head>
 <body>
     <header>
-        <a href="@Url.Action("Index", "Home")"><img src="~/Content/img/logo_header.png" alt="BeatBuddy logo" /></a> 
+        <a href="@Url.Action("Index", "Home")"><img src="~/Content/img/logo_header.png" alt="BeatBuddy logo" /></a>
         <ul class="nav">
             <li>@Html.Partial("_LoginPartial")</li>
         </ul>
     </header>
+
+    @RenderSection("escape_padding", required: false)
 
     <div class="body-content">
         @RenderBody()
