--- a/UI-MVC/Views/Home/Index.cshtml
+++ b/UI-MVC/Views/Home/Index.cshtml
@@ -2,6 +2,17 @@
     ViewBag.Title = "Home Page";
 }
 
+@section escape_padding {
+    <div id="banner">
+        <div class="content">
+            <h1>Create and share playlists</h1>
+            <h2>With your friends, family and the world.</h2>
+            <a href="#" class="button">Explore</a>
+            <a href="#" class="button">Join us</a>
+        </div>
+    </div>
+}
+
 <div class="title">
     <h1>What</h1>
     is BeatBuddy?
